--- a/config/paddle_ocr_template.yml
+++ b/config/paddle_ocr_template.yml
@@ -16,17 +16,17 @@ Global:
   
 Architecture:
   model_type: rec
-  algorithm: SVTR_LCNet
+  algorithm: CRNN
   Transform:
   Backbone:
-    name: PPLCNetV3
-    scale: 0.95
+    name: MobileNetV3
+    scale: 0.5
+    model_name: large
   Neck:
     name: SequenceEncoder
-    encoder_type: svtr 
+    encoder_type: rnn 
     depth: 2
-    hidden_dims: 120
-    use_guide: True
+    hidden_size: 96
   Head:
     name: CTCHead
     fc_decay: 0.00001
@@ -70,7 +70,7 @@ Train:
           std: [0.5, 0.5, 0.5]
           order: 'hwc'
       - RecResizeImg:
-          image_shape: [3, 64, 64]
+          image_shape: [3, 32, 32]
       - KeepKeys: 
           keep_keys: ['image', 'label', 'length']
 
@@ -96,7 +96,7 @@ Eval:
           std: [0.5, 0.5, 0.5]
           order: 'hwc'
       - RecResizeImg:
-          image_shape: [3, 64, 64]
+          image_shape: [3, 32, 32]
       - KeepKeys: 
           keep_keys: ['image', 'label', 'length']
       
